Refactor and expand the Gulpfile. Better handling of reloads via BrowserSync. Also using Useref for assets, and Babel for ES6.

--- a/src/haml/somedirectory/index.haml
+++ b/src/haml/somedirectory/index.haml
@@ -12,8 +12,8 @@
     %meta(name="robots" content="index, follow")
 
     <!--build:css /css/all.min.css -->
-    %link(rel="stylesheet" href="/css/vendor/bootstrap.css")
-    %link(rel="stylesheet" href="/css/styles.css")
+    %link(rel="stylesheet" href="../css/vendor/bootstrap.css")
+    %link(rel="stylesheet" href="../css/styles.css")
     <!-- endbuild -->
 
   %body
@@ -21,12 +21,12 @@
       // Some content here
 
     %section
-      %img(src="/img/temp.jpg" alt="Michael Scott")
-      
+      %p Hello World!
+
     %footer
       // Some content here
 
     <!--build:js /js/all.min.js -->
-    %script(src="/js/vendor/bootstrap.js")
-    %script(src="/js/app.js")
+    %script(src="../js/vendor/bootstrap.js")
+    %script(src="../js/app.js")
     <!-- endbuild -->
