Enable usage of partials in Haml by using gulp-inject-partials. Also move a few things around and do some re-naming.

--- a/src/haml/test-directory/index.haml
+++ b/src/haml/test-directory/index.haml
@@ -5,22 +5,22 @@
     %meta(content="IE=edge,chrome=1" http-equiv="X-UA-Compatible")
     %meta(name="viewport" content="width=device-width")
 
-    %title Haml Template
+    %title Haml Template Sub-page
     %meta(name="description" content="")
     %meta(name="keywords" content="")
 
     %meta(name="robots" content="index, follow")
 
-    <!-- partial:partials/_head.html -->
+    <!-- partial:../partials/_head.html -->
     <!-- partial -->
 
   %body
-    <!-- partial:partials/_header.html -->
+    <!-- partial:../partials/_header.html -->
     <!-- partial -->
 
     %section
       %h1 Hello World
       %img(src="/img/temp.jpg" alt="Michael Scott")
 
-    <!-- partial:partials/_footer.html -->
+    <!-- partial:../partials/_footer.html -->
     <!-- partial -->
