Enable different base path when building for production (for Github pages relative path issue). Better handling of serve/build task runners. Asset path changes.

--- a/src/haml/index.haml
+++ b/src/haml/index.haml
@@ -19,8 +19,8 @@
     <!-- partial -->
 
     %section
-      %h1 Hello World
-      %img(src="/img/temp.jpg" alt="Michael Scott")
+      %h1 Hello...
+      %img(src="/assets/img/temp.jpg" alt="Michael Scott")
 
     <!-- partial:partials/_footer.html -->
     <!-- partial -->
