Copy and reference compiled dependencies, some  filepath changes

--- a/src/haml/partials/_footer.haml
+++ b/src/haml/partials/_footer.haml
@@ -2,6 +2,6 @@
   This is a footer!
 
 <!--build:js /js/all.min.js -->
--# %script(src="/js/vendor/somefile.js")
+%script(src="/lib/jquery/dist/jquery.js")
 %script(src="/js/app.js")
 <!-- endbuild -->
