--- a/src/haml/test-directory/index.haml
+++ b/src/haml/test-directory/index.haml
@@ -20,7 +20,7 @@
 
     %section
       %h1 This is a subpage!
-      %img(src="/assets/img/temp.jpg" alt="Michael Scott")
+      %img(src="/img/temp.jpg" alt="Michael Scott")
 
     <!-- partial:../partials/_footer.html -->
     <!-- partial -->
