--- a/src/haml/index.haml
+++ b/src/haml/index.haml
@@ -11,16 +11,15 @@
 
     %meta(name="robots" content="index, follow")
 
-    <!-- partial:partials/_head.html -->
-    <!-- partial -->
+    __include('_head.html')
 
   %body
-    <!-- partial:partials/_header.html -->
-    <!-- partial -->
+    __include('_header.html')
 
     %section
       %h1 Hello...
       %img(src="/img/temp.jpg" alt="Michael Scott")
 
-    <!-- partial:partials/_footer.html -->
-    <!-- partial -->
+    __include('_footer.html')
+
+    __include('_scripts.html')
