Use normalize.css

--- a/src/haml/partials/_head.haml
+++ b/src/haml/partials/_head.haml
@@ -1,4 +1,5 @@
 <!--build:css /css/all.min.css -->
+%link(rel="stylesheet" href="/lib/normalize.css/normalize.css")
 %link(rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css")
 %link(rel="stylesheet" href="/css/styles.css")
 <!-- endbuild -->
