Update Autoprefixer and change basepath ref

--- a/src/haml/partials/_scripts.haml
+++ b/src/haml/partials/_scripts.haml
@@ -1,4 +1,4 @@
-<!--build:js /js/all.js -->
+<!--build:js /js/all.min.js -->
 %script(src="/lib/jquery/dist/jquery.js")
 %script(src="/lib/popper.js/dist/popper.js")
 %script(src="/lib/bootstrap/dist/js/bootstrap.js")
