Fix fileinclude that was causing partial injection to fail, downgrade uglify-es dependency for temp fix of issue #2

--- a/src/haml/test-directory/index.haml
+++ b/src/haml/test-directory/index.haml
@@ -11,15 +11,14 @@
 
     %meta(name="robots" content="index, follow")
 
-    __include('_head.html')
+    <!-- @@include('_head.html') -->
 
   %body
-    __include('_header.html')
+    <!-- @@include('_header.html') -->
 
     %section
       %h1 This is a subpage!
       %img(src="/img/temp.jpg" alt="Michael Scott")
 
-    __include('_footer.html')
-
-    __include('_scripts.html')
+    <!-- @@include('_footer.html') -->
+    <!-- @@include('_scripts.html') -->
