--- a/src/views/test-directory/index.pug
+++ b/src/views/test-directory/index.pug
@@ -8,4 +8,4 @@ block variables
 block content
   section
     h1 Sub-page
-    img(src="/img/temp.jpg" alt="Michael Scott")
+    img(src="/assets/img/temp.jpg" alt="Michael Scott")
