--- a/src/views/layouts/_default.pug
+++ b/src/views/layouts/_default.pug
@@ -1,4 +1,4 @@
-block variables
+block meta
 
 doctype html
 html
@@ -11,8 +11,7 @@ html
     meta(content="IE=edge,chrome=1" http-equiv="X-UA-Compatible")
     meta(name="viewport" content="width=device-width")
 		
-    block head
-      link(rel="stylesheet" href="/css/all.css")
+    block styles
 		
   body
     block header
@@ -24,4 +23,3 @@ html
       include ../includes/_footer.pug
 		
     block scripts
-      script(src="/js/all.js")
